--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
           </div>
         </div>
       </div>
+
+      <div class="col-md-5">
+        <div class="card feature-card shadow-sm p-4">
+          <div class="card-body text-center">
+            <h5 class="card-title">💰 Fee Management</h5>
+            <p class="card-text">Track fees, view pending amounts, and send reminders.</p>
+            <a href="fee.html" class="btn btn-custom mt-3">Open Fee Module</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-5">
+        <div class="card feature-card shadow-sm p-4">
+          <div class="card-body text-center">
+            <h5 class="card-title">👩‍🏫 Teacher Database</h5>
+            <p class="card-text">View and manage teacher profiles and teaching records.</p>
+            <a href="teacher.html" class="btn btn-custom mt-3">Open Teacher Module</a>
+          </div>
+        </div>
+      </div>
+
       <div class="col-md-5">
         <div class="card feature-card shadow-sm p-4">
           <div class="card-body text-center">
