--- a/teacher.html
+++ b/teacher.html
@@ -83,7 +83,7 @@
           <td>English</td>
           <td>6A, 6B</td>
           <td>
-            <button class="btn btn-sm btn-view" onclick="viewTeacherProfile('Radhika Joshi', 'English', '6A, 6B', '8 years', 'M.A. English, B.Ed', 'June 2016', '+91-9876543210', 'radhika@school.org', 'https://randomuser.me/api/portraits/women/44.jpg')" data-bs-toggle="modal" data-bs-target="#viewTeacherModal">View</button>
+            <button class="btn btn-sm btn-view" onclick="viewTeacherProfile('Martha Stewart', 'English', '6A, 6B', '8 years', 'M.A. English, B.Ed', 'June 2016', '+91-9876543210', 'radhika@school.org', 'https://randomuser.me/api/portraits/women/44.jpg')" data-bs-toggle="modal" data-bs-target="#viewTeacherModal">View</button>
           </td>
         </tr>
       </tbody>
